# Lexara-AI

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
api/: alembic.ini
api/alembic/: env.py
api/alembic/versions/: .gitkeep  36fac768f724_add_oauth_fields.py  f75619aa1cb1_create_users_table.py
api/app/: __init__.py  main.py
api/app/api/v1/auth/: basic.py  oauth.py
api/app/core/: config.py  dependencies.py  exceptions.py  security.py
api/app/db/: base.py  session.py
api/app/models/: user.py
api/app/schemas/: auth.py
api/app/services/: auth_service.py  oauth_service.py  pkce_service.py
core/: app.py  config.py  graph.py  state.py
core/models/: agent_prompts.py  intent.py  model_registry.py
core/nodes/: intent_agent.py  orchestrator.py  response_agent.py  router.py
